added slash to bundle.js in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Photo Gallery</title>
-    <link rel='stylesheet' href='styles.css'/>
+    <link rel='stylesheet' href='/styles.css'/>
   </head>
 
   <body>
@@ -10,6 +10,6 @@
     <noscript>
       Enable Javascript
     </noscript>
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
